src/test/deca/context/invalid/our_tests/alex-cast-invalid3.deca
// Description:
//    Test contextuellement invalide sur un cast d'int en bool
//
// Resultats:
//    DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:42) - verify
//    program: start
//    DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass
//    (ListDeclClass.java:46) - verify listClass: start
//    DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass
//    (ListDeclClass.java:52) - verify listClass: end
//    DEBUG fr.ensimag.deca.tree.Main.verifyMain(Main.java:37) - verify Main:
//    start
//    ./src/test/deca/context/invalid/our_tests/alex-cast-invalid.deca:20:13:
//    Expected int or float got boolean (rule 3.39)
//
// Historique:
//    20/01/2017

{
    (float) (false);
}
